# sfenimageserver

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: main.rs  myoptions.rs  sfen.rs  svg2png.rs  svgbuilder.rs
test/: usecase.sh
