[package]
name = "sfenimageserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
# tower = "<latest-version>"
regex = "1"
simplelog = "0.11"
log = { version = "0.4.*", features = ["std"] }
once_cell = "1.10"
